k8s-manifests/apps/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
